--- a/prepare/back/package.json
+++ b/prepare/back/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.3",
     "mysql2": "^2.3.0",
     "nodemon": "^2.0.13",
     "passport": "^0.5.0",
