--- a/prepare/front/package.json
+++ b/prepare/front/package.json
@@ -25,10 +25,12 @@
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "prop-types": "^15.7.2",
+    "react-dom": "^17.0.2",
     "react-hook-form": "^7.17.2",
     "react-intersection-observer": "^8.32.1",
     "react-redux": "^7.2.5",
     "react-slick": "^0.28.1",
+    "react-transition-group": "^4.4.2",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
