--- a/prepare/front/package.json
+++ b/prepare/front/package.json
@@ -25,6 +25,7 @@
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "prop-types": "^15.7.2",
+    "react-bootstrap-sweetalert": "^5.2.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.17.2",
     "react-intersection-observer": "^8.32.1",
