--- a/prepare/front/package.json
+++ b/prepare/front/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "next",
-    "build": "cross-env ANALYZE=true NODE_ENV=production next build"
+    "build": "cross-env ANALYZE=true NODE_ENV=production next build",
+    "lint": "eslint ./components/ReportModal.js --fix"
   },
   "author": "Chad",
   "license": "ISC",
@@ -25,6 +26,7 @@
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "prop-types": "^15.7.2",
+    "react": "^17.0.2",
     "react-bootstrap-sweetalert": "^5.2.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.17.2",
@@ -41,9 +43,12 @@
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.4.1"
   }
 }
