--- a/prepare/front/package.json
+++ b/prepare/front/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.22.0",
     "babel-plugin-styled-components": "^1.13.3",
     "cross-env": "^7.0.3",
+    "dayjs": "^1.10.7",
     "faker": "^5.5.3",
     "immer": "^9.0.6",
     "next": "^11.1.2",
@@ -30,6 +31,7 @@
     "react-bootstrap-sweetalert": "^5.2.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.17.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-intersection-observer": "^8.32.1",
     "react-redux": "^7.2.5",
     "react-slick": "^0.28.1",
