--- a/prepare/back/package.json
+++ b/prepare/back/package.json
@@ -5,8 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app",
-    "start": "node app"
+    "dev": "nodemon app"
   },
   "author": "Chad",
   "license": "ISC",
