--- a/prepare/back/package.json
+++ b/prepare/back/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app",
-    "start": "node app"
+    "start": "cross-env NODE_ENV=production pm2 start app"
   },
   "author": "Chad",
   "license": "ISC",
@@ -14,9 +14,12 @@
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "helmet": "^4.6.0",
+    "hpp": "^0.2.3",
     "mariadb": "^2.5.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
@@ -25,6 +28,7 @@
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
+    "pm2": "^5.1.2",
     "sequelize": "^6.7.0",
     "sequelize-cli": "^6.2.0"
   }
