--- a/prepare/front/package.json
+++ b/prepare/front/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "next",
     "build": "cross-env ANALYZE=true NODE_ENV=production next build",
-    "lint": "eslint ./components/ReportModal.js --fix"
+    "lint": "eslint ./components/ReportModal.js --fix",
+    "start": "cross-env NODE_ENV=production next start -p 80"
   },
   "author": "Chad",
   "license": "ISC",
