--- a/prepare/back/package.json
+++ b/prepare/back/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app",
-    "start": "cross-env NODE_ENV=production pm2 start app"
+    "start": "cross-env NODE_ENV=production pm2 start app.js"
   },
   "author": "Chad",
   "license": "ISC",
