--- a/prepare/front/package.json
+++ b/prepare/front/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "next -p 3060",
-    "build": "cross-env ANALYZE=true NODE_ENV=production next build",
-    "start": "cross-env NODE_ENV=production next start -p 3060",
+    "build": "ANALYZE=true NODE_ENV=production next build",
+    "start": "NODE_ENV=production next start -p 3060",
     "lint": "next lint"
   },
   "author": "Chad",
